Update title and body

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-	<title>Jeshwan</title>
+	<title>Full Stack Web Developer | Jeshwan Khoodeeram</title>
 
 	<style type='text/css'>
 		body {
@@ -199,7 +199,7 @@
 
 	<div id='content'>
 
-		<h1 align="center">Hi, I'm Jeshwan</h1>
+		<h1 align="center">Hi, I'm Jeshwan Khoodeeram!</h1>
 		<h3 align="center">A passionate full stack web developer from Mauritius</h3>
 
 		<br />
