--- a/index.html
+++ b/index.html
@@ -216,6 +216,9 @@
 		</p>
 
 	</div>
+			
+	<script async src="//static.getclicky.com/101328191.js"></script>
+<noscript><p><img alt="Clicky" width="1" height="1" src="//in.getclicky.com/101328191ns.gif" /></p></noscript>
 
 </body>
 
