--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	
+	<link rel="dns-prefetch" href="https://github-readme-stats.vercel.app/" >
+	<link rel="dns-prefetch" href="https://static.getclicky.com/" >
 
 	<title>Jeshwan Khoodeeram | Full Stack Web Developer</title>
     <meda name="description" content="I'm Jeshwan Khoodeeram! A passionate full stack web developer from Mauritius.">
