Fix meta description

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 	<link rel="preconnect" href="https://static.getclicky.com">
 
 	<title>Jeshwan Khoodeeram | Full Stack Web Developer</title>
-    <meda name="description" content="I'm Jeshwan Khoodeeram! A passionate full stack web developer from Mauritius.">
+    <meta name="description" content="I'm Jeshwan Khoodeeram! A passionate full stack web developer from Mauritius.">
 
 	<style type='text/css'>
 		body {
