Add width and height to stats image

--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
 		<br />
 
 		<p align="center">
-			<img src="https://github-readme-stats.vercel.app/api?username=jeshwan&show_icons=true&theme=dark&locale=en"
+			<img width="468" height="181" src="https://github-readme-stats.vercel.app/api?username=jeshwan&show_icons=true&theme=dark&locale=en"
 				alt="jeshwan" />
 		</p>
 
