--- a/index.html
+++ b/index.html
@@ -93,6 +93,10 @@
 			<img width="495" height="195" src="https://github-readme-stats.vercel.app/api?username=jeshwan&show_icons=true&theme=dark&locale=en"
 				alt="jeshwan" />
 		</p>
+			
+		<br />
+
+		<p align="center"><strong>This is only a temporary page. Website under construction!<strong></p>
 
 	</div>
 			
