--- a/index.html
+++ b/index.html
@@ -78,14 +78,14 @@
 
 	<div id='content'>
 
-		<h1 align="center">Hi, I'm Jeshwan Khoodeeram!</h1>
+		<h1 align="center">Hello World! I'm Jeshwan Khoodeeram!</h1>
 		<h2 align="center">A passionate full stack web developer from Mauritius</h2>
 
 		<br />
 
-		<p align="center">I’m currently learning <strong>Kubernetes, DevOps and Motion Design<strong></p>
+		<p align="center">I’m currently building a brand identity for this website. Check back in a couple of weeks. The end result will be amazing!<strong></strong></p>
 
-		<p align="center">All my projects are available at https://github.com/jeshwan-projects</p>
+<!-- 		<p align="center">All my projects are available at https://github.com/jeshwan-projects</p> -->
 
 		<br />
 
@@ -93,10 +93,6 @@
 			<img width="495" height="195" src="https://github-readme-stats.vercel.app/api?username=jeshwan&show_icons=true&theme=dark&locale=en"
 				alt="jeshwan" />
 		</p>
-			
-		<br />
-
-		<p align="center"><strong>This is only a temporary page. Website under construction!<strong></p>
 
 	</div>
 			
