--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 
 		<br />
 
-		<p align="center">I’m currently building a brand identity for this website. Check back in a couple of weeks. The end result will be amazing!<strong></strong></p>
+		<p align="center">I’m currently building a brand identity for this website. Check back in a couple of weeks.<strong></strong></p>
 
 	</div>
 	
